# Smart_Grocery_Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  fly.toml  last_result.json  package.json  pytest.ini  ruff.toml
.claude/: settings.json
archive/prototype/: orchestrator.py  pyproject.toml  run.py  schema.py
archive/prototype/tests/: conftest.py  test_lookup_store_product.py  test_orchestrator.py
archive/prototype/tools/: analyze_pcsv.py  get_recipe_detail.py  search_recipes.py
contracts/: CHANGELOG.md  api_types.py  kb_schema.sql  pg_schema.sql  sse_events.py  tool_schemas.py  validate.py
data/: CLAUDE.md  glossary.json  kb.sqlite  metadata.json  pcsv_mappings.json  recipes.json  substitutions.json  verification_report.json
docs/: INDEX.md  Smart_Grocery_Assistant___V2_Implementation_Plan.md  ai-layer-architecture-v2.md  architecture-spec-v2.md  phase-1-plan.md  product-spec-v2.md  verify-chat-flow-findings.md  wireframe-v2.html
loadtest/: README.md  locustfile.py  run_promptfoo_deploy.sh
prototype/: orchestrator.py  prompt.py  pyproject.toml  schema.py
scripts/: CLAUDE.md  cache_probe.py  cache_probe_app.py  merge_cookwell.py  migrate_kb.py  normalize_cookwell.py  scrape_saveonfoods.py  validate_kb.py  verify-chat-flow.py
src/backend/: CLAUDE.md  Dockerfile.dev  alembic.ini  auth.py  frontend_serve.py  main.py  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 001_initial.py
src/backend/api/: auth.py  grocery.py  internal.py  recipes.py  saved.py  sessions.py
src/backend/db/: __init__.py  crud.py  engine.py  tables.py
tests/: conftest.py  test_alembic.py  test_api_auth.py  test_api_internal.py  test_api_recipe_detail.py  test_api_saved.py  test_api_sessions.py  test_auth.py  test_cache_client.py  test_cache_integration.py  test_cache_keys.py  test_cache_outage.py  test_cache_wrapper.py  test_chat_e2e.py  test_context.py  (+37 more)
(+410 files in other folders)
