[project]
name = "sga-prototype"
version = "0.1.0"
description = "Smart Grocery Assistant V2 — Phase 1a agent harness"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "thefuzz[speedup]>=0.22",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["prototype", "prototype.tools"]

[tool.setuptools.package-dir]
prototype = "."
"prototype.tools" = "tools"
