[project]
name = "sga-backend"
version = "0.1.0"
description = "Smart Grocery Assistant V2 — FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "httpx>=0.28",
    "pyjwt[crypto]>=2.9",
    "python-dotenv>=1.0",
    "aiosqlite>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "psycopg2-binary>=2.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
